added bateria project

--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
         Mis redes
       </h2>
       <div class="boxes">
-        <div>
+        <div id="mail-box">
           <span class="text-secondary">Email:</span> victor.david.lip@gmail.com
         </div>
         <div>
