--- a/work.html
+++ b/work.html
@@ -53,11 +53,13 @@
       <h1 class="lg-heading">
         Mis <span class="text-secondary"> Proyectos</span>
       </h1>
-
+      <h2 class="sm-heading">
+        revisa mis proyectos
+      </h2>
       <div class="projects">
         <div class="item">
           <a href="https://lipitt.github.io/Reloj-en-CSS-y-JS/">
-            <img src="img/proyects/project1.jpg" alt="Project" />
+            <img src="img/projects/project1.jpg" alt="Project" />
           </a>
           <a
             href="https://lipitt.github.io/Reloj-en-CSS-y-JS/"
@@ -74,7 +76,7 @@
         </div>
         <div class="item">
           <a href="https://Lipitt.github.io/Flex-Panels">
-            <img src="img/proyects/project2.jpg" alt="Project" />
+            <img src="img/projects/project2.jpg" alt="Project" />
           </a>
           <a href="https://Lipitt.github.io/Flex-Panels" class="btn-light">
             <i class="fas fa-eye"></i> Flex Panels
@@ -85,7 +87,7 @@
         </div>
         <div class="item">
           <a href="https://lipitt.github.io/Landing-Page/">
-            <img src="img/proyects/project3.jpg" alt="Project" />
+            <img src="img/projects/project3.jpg" alt="Project" />
           </a>
           <a href="https://lipitt.github.io/Landing-Page/" class="btn-light">
             <i class="fas fa-eye"></i> Landing Page
@@ -96,7 +98,7 @@
         </div>
         <div class="item">
           <a href="https://lipitt.github.io/Code-Player/">
-            <img src="img/proyects/project4.jpg" alt="Project" />
+            <img src="img/projects/project4.jpg" alt="Project" />
           </a>
           <a href="https://lipitt.github.io/Code-Player/" class="btn-light">
             <i class="fas fa-eye"></i> Code Player
@@ -107,7 +109,7 @@
         </div>
         <div class="item">
           <a href="https://lipitt.github.io/Random-Quote-Generator/">
-            <img src="img/proyects/project5.jpg" alt="Project" />
+            <img src="img/projects/project5.jpg" alt="Project" />
           </a>
           <a
             href="https://lipitt.github.io/Random-Quote-Generator/"
@@ -119,6 +121,17 @@
             href="https://github.com/Lipitt/Random-Quote-Generator"
             class="btn-dark"
           >
+            <i class="fab fa-github"></i> Github
+          </a>
+        </div>
+        <div class="item">
+          <a href="https://lipitt.github.io/Bateria/">
+            <img src="img/projects/project6.jpg" alt="Project" />
+          </a>
+          <a href="https://lipitt.github.io/Bateria/" class="btn-light">
+            <i class="fas fa-eye"></i> Bateria en JS
+          </a>
+          <a href="https://github.com/Lipitt/Bateria" class="btn-dark">
             <i class="fab fa-github"></i> Github
           </a>
         </div>
