deleted facebook icon

--- a/index.html
+++ b/index.html
@@ -27,24 +27,16 @@
 
         <ul class="menu-nav">
           <li class="nav-item current">
-            <a href="index.html" class="nav-link">
-              Home
-            </a>
+            <a href="index.html" class="nav-link"> Home </a>
           </li>
           <li class="nav-item">
-            <a href="about.html" class="nav-link">
-              Acerca de mí
-            </a>
+            <a href="about.html" class="nav-link"> Acerca de mí </a>
           </li>
           <li class="nav-item">
-            <a href="work.html" class="nav-link">
-              Mis proyectos
-            </a>
+            <a href="work.html" class="nav-link"> Mis proyectos </a>
           </li>
           <li class="nav-item">
-            <a href="contact.html" class="nav-link">
-              Contacto
-            </a>
+            <a href="contact.html" class="nav-link"> Contacto </a>
           </li>
         </ul>
       </nav>
@@ -53,13 +45,8 @@
       <h1 class="lg-heading">
         David <span class="text-secondary">Lipshitz</span>
       </h1>
-      <h2 class="sm-heading">
-        Desarrollador Front-End Jr
-      </h2>
+      <h2 class="sm-heading">Front End Developer</h2>
       <div class="icons">
-        <a href="https://www.facebook.com/Lipit">
-          <i class="fab fa-facebook fa-2x"></i>
-        </a>
         <a href="https://www.linkedin.com/in/david-lipshitz/">
           <i class="fab fa-linkedin fa-2x"></i>
         </a>
