--- a/work.html
+++ b/work.html
@@ -59,7 +59,7 @@
       <div class="projects">
         <div class="item">
           <a href="https://lipitt.github.io/Reloj-en-CSS-y-JS/">
-            <img src="img/projects/project1.jpg" alt="Project" />
+            <img src="img/projects/reloj.jpg" alt="Project" />
           </a>
           <a
             href="https://lipitt.github.io/Reloj-en-CSS-y-JS/"
@@ -76,7 +76,7 @@
         </div>
         <div class="item">
           <a href="https://Lipitt.github.io/Flex-Panels">
-            <img src="img/projects/project2.jpg" alt="Project" />
+            <img src="img/projects/panels.jpg" alt="Project" />
           </a>
           <a href="https://Lipitt.github.io/Flex-Panels" class="btn-light">
             <i class="fas fa-eye"></i> Flex Panels
@@ -87,7 +87,7 @@
         </div>
         <div class="item">
           <a href="https://lipitt.github.io/Landing-Page/">
-            <img src="img/projects/project3.jpg" alt="Project" />
+            <img src="img/projects/landing page.jpg" alt="Project" />
           </a>
           <a href="https://lipitt.github.io/Landing-Page/" class="btn-light">
             <i class="fas fa-eye"></i> Landing Page
@@ -98,7 +98,7 @@
         </div>
         <div class="item">
           <a href="https://lipitt.github.io/Code-Player/">
-            <img src="img/projects/project4.jpg" alt="Project" />
+            <img src="img/projects/code player.jpg" alt="Project" />
           </a>
           <a href="https://lipitt.github.io/Code-Player/" class="btn-light">
             <i class="fas fa-eye"></i> Code Player
@@ -109,7 +109,7 @@
         </div>
         <div class="item">
           <a href="https://lipitt.github.io/Random-Quote-Generator/">
-            <img src="img/projects/project5.jpg" alt="Project" />
+            <img src="img/projects/quote generator.jpg" alt="Project" />
           </a>
           <a
             href="https://lipitt.github.io/Random-Quote-Generator/"
@@ -126,7 +126,7 @@
         </div>
         <div class="item">
           <a href="https://lipitt.github.io/Bateria/">
-            <img src="img/projects/project6.jpg" alt="Project" />
+            <img src="img/projects/bateria.jpg" alt="Project" />
           </a>
           <a href="https://lipitt.github.io/Bateria/" class="btn-light">
             <i class="fas fa-eye"></i> Bateria en JS
@@ -134,6 +134,18 @@
           <a href="https://github.com/Lipitt/Bateria" class="btn-dark">
             <i class="fab fa-github"></i> Github
           </a>
+        </div>
+        <div class="item">
+          <a href="https://lipitt.github.io/Responsive-Portfolio/">
+            <img src="img/projects/responsive portfolio.jpg" alt="Project" />
+          </a>
+          <a href="https://lipitt.github.io/Responsive-Portfolio/" class="btn-light">
+            <i class="fas fa-eye"></i> Portfolio
+          </a>
+          <a href="https://github.com/Lipitt/Responsive-Portfolio" class="btn-dark">
+            <i class="fab fa-github"></i> Github
+          </a>
+          <p>proyecto hecho en base a unos peruanos locos</p>
         </div>
       </div>
     </main>
