--- a/work.html
+++ b/work.html
@@ -27,24 +27,16 @@
 
         <ul class="menu-nav">
           <li class="nav-item">
-            <a href="index.html" class="nav-link">
-              Home
-            </a>
+            <a href="index.html" class="nav-link"> Home </a>
           </li>
           <li class="nav-item">
-            <a href="about.html" class="nav-link">
-              Acerca de mi
-            </a>
+            <a href="about.html" class="nav-link"> Acerca de mi </a>
           </li>
           <li class="nav-item current">
-            <a href="work.html" class="nav-link">
-              Mis proyectos
-            </a>
+            <a href="work.html" class="nav-link"> Mis proyectos </a>
           </li>
           <li class="nav-item">
-            <a href="contact.html" class="nav-link">
-              Contacto
-            </a>
+            <a href="contact.html" class="nav-link"> Contacto </a>
           </li>
         </ul>
       </nav>
@@ -53,9 +45,7 @@
       <h1 class="lg-heading">
         Mis <span class="text-secondary"> Proyectos</span>
       </h1>
-      <h2 class="sm-heading">
-        revisa mis proyectos
-      </h2>
+      <h2 class="sm-heading">revisa mis proyectos</h2>
       <div class="projects">
         <div class="item">
           <a href="https://lipitt.github.io/Reloj-en-CSS-y-JS/">
@@ -139,19 +129,22 @@
           <a href="https://lipitt.github.io/Responsive-Portfolio/">
             <img src="img/projects/responsive portfolio.jpg" alt="Project" />
           </a>
-          <a href="https://lipitt.github.io/Responsive-Portfolio/" class="btn-light">
+          <a
+            href="https://lipitt.github.io/Responsive-Portfolio/"
+            class="btn-light"
+          >
             <i class="fas fa-eye"></i> Portfolio
           </a>
-          <a href="https://github.com/Lipitt/Responsive-Portfolio" class="btn-dark">
+          <a
+            href="https://github.com/Lipitt/Responsive-Portfolio"
+            class="btn-dark"
+          >
             <i class="fab fa-github"></i> Github
           </a>
-          <p>proyecto hecho en base a unos peruanos locos</p>
         </div>
       </div>
     </main>
-    <footer id="main-footer">
-      Copyright &copy; 2020;
-    </footer>
+    <footer id="main-footer">Copyright &copy; 2020;</footer>
     <script src="js/main.js"></script>
   </body>
 </html>
