--- a/about.html
+++ b/about.html
@@ -27,24 +27,16 @@
 
         <ul class="menu-nav">
           <li class="nav-item">
-            <a href="index.html" class="nav-link">
-              Home
-            </a>
+            <a href="index.html" class="nav-link"> Home </a>
           </li>
           <li class="nav-item current">
-            <a href="about.html" class="nav-link">
-              Acerca de mi
-            </a>
+            <a href="about.html" class="nav-link"> Acerca de mi </a>
           </li>
           <li class="nav-item">
-            <a href="work.html" class="nav-link">
-              Mis proyectos
-            </a>
+            <a href="work.html" class="nav-link"> Mis proyectos </a>
           </li>
           <li class="nav-item">
-            <a href="contact.html" class="nav-link">
-              Contacto
-            </a>
+            <a href="contact.html" class="nav-link"> Contacto </a>
           </li>
         </ul>
       </nav>
@@ -53,28 +45,36 @@
       <h1 class="lg-heading">
         Acerca De <span class="text-secondary"> Mi</span>
       </h1>
-      <h2 class="sm-heading">
-        Quiero contarte algunas cosas...
-      </h2>
+      <h2 class="sm-heading">Quiero contarte algunas cosas...</h2>
       <div class="about-info">
         <img src="img/portrait.jpg" alt="David Lipshitz" class="bio-image" />
         <div class="bio">
           <h3 class="text-secondary">David Lipshitz</h3>
           <p>
-            Soy un desarrollador front-end jr, trabajando como soporte tecnico
-            en Megadata y cursando el 3er año de ing. en sistemas en la UAI.
-            Realize cursos en EducacionIT, pero la mayor parte de mi
-            conocimiento lo aprendi por mi propia cuenta. Estoy buscando trabajo
-            como desarrollador web, preferentemente en proyectos que usen
-            tecnologias javascript, para seguir creciendo como desarrollador y
-            potenciar mi carrera.
+            Soy un FrontEnd Developer trabajando mayormente con React. Estoy
+            participando activamente en proyectos y grupos de estudio de la
+            comunidad
+            <a class="link" href="https://frontend.cafe/" target="_blank"
+              >FrontEnd Cafe</a
+            >
+            Empecé estudiando Ingeniería en Sistemas en la
+            <a
+              class="link"
+              href="https://uai.edu.ar/facultades/tecnolog%C3%ADa-inform%C3%A1tica/ingenier%C3%ADa-en-sistemas-inform%C3%A1ticos/"
+              target="_blank"
+              >UAI</a
+            >
+            y tengo cursos completos en EducacionIT y Udemy, pero con el tiempo
+            me di cuenta que lo que mas me hizo crecer como desarrollador (y
+            también como persona) fueron las comunidades como freeCodeCampBA y
+            FrontEnd Cafe, lo que me hizo tomar el gusto por colaborar y
+            participar en proyectos comunitarios. No dudes en contactarme si
+            crees que puedo ayudarte.
           </p>
         </div>
       </div>
     </main>
-    <footer id="main-footer">
-      Copyright &copy; 2019;
-    </footer>
+    <footer id="main-footer">Copyright &copy; 2021;</footer>
     <script src="js/main.js"></script>
   </body>
 </html>
