--- a/contact.html
+++ b/contact.html
@@ -27,33 +27,23 @@
 
         <ul class="menu-nav">
           <li class="nav-item">
-            <a href="index.html" class="nav-link">
-              Home
-            </a>
+            <a href="index.html" class="nav-link"> Home </a>
           </li>
           <li class="nav-item">
-            <a href="about.html" class="nav-link">
-              Acerca de mi
-            </a>
+            <a href="about.html" class="nav-link"> Acerca de mi </a>
           </li>
           <li class="nav-item">
-            <a href="work.html" class="nav-link">
-              Mis proyectos
-            </a>
+            <a href="work.html" class="nav-link"> Mis proyectos </a>
           </li>
           <li class="nav-item current">
-            <a href="contact.html" class="nav-link">
-              Contacto
-            </a>
+            <a href="contact.html" class="nav-link"> Contacto </a>
           </li>
         </ul>
       </nav>
     </header>
     <main id="contact">
       <h1 class="lg-heading">Contac<span class="text-secondary">to</span></h1>
-      <h2 class="sm-heading">
-        Mis redes
-      </h2>
+      <h2 class="sm-heading">Mis redes</h2>
       <div class="boxes">
         <div id="mail-box">
           <span class="text-secondary">Email:</span> victor.david.lip@gmail.com
@@ -68,9 +58,7 @@
         </div>
       </div>
     </main>
-    <footer id="main-footer">
-      Copyright &copy; 2019;
-    </footer>
+    <footer id="main-footer">Copyright &copy; 2021;</footer>
     <script src="js/main.js"></script>
   </body>
 </html>
