updated contact info

--- a/contact.html
+++ b/contact.html
@@ -53,10 +53,15 @@
           11-6677-7406
         </div>
         <div>
-          <span class="text-secondary">Dirección:</span>
-          Avellaneda 2547, Castelar, Moron
+          <span class="text-secondary">Ubicacion:</span>
+          Castelar, Moron, Provincia de Buenos Aires
         </div>
-      </div>
+        <div class="icons">
+          <a href="https://www.linkedin.com/in/david-lipshitz/">
+            <i class="fab fa-linkedin fa-2x"></i>
+          </a>
+        </div>
+     
     </main>
     <footer id="main-footer">Copyright &copy; 2021;</footer>
     <script src="js/main.js"></script>
