added buscahub react project

--- a/work.html
+++ b/work.html
@@ -45,8 +45,24 @@
       <h1 class="lg-heading">
         Mis <span class="text-secondary"> Proyectos</span>
       </h1>
-      <h2 class="sm-heading">revisa mis proyectos</h2>
+      <h2 class="sm-heading">Revisa mis proyectos</h2>
       <div class="projects">
+        <div class="item item-card">
+          <a href="https://buscahub.netlify.app/">
+            <img src="img/projects/buscahub-react.jpg" alt="Project" />
+          </a>
+          <a href="https://buscahub.netlify.app/" class="btn-light">
+            <i class="fas fa-eye"></i> BuscaHub React
+          </a>
+          <a href="https://github.com/Lipitt/BuscaHub-React" class="btn-dark">
+            <i class="fab fa-github"></i> Github
+          </a>
+          <p class="text-card">
+            Buscador de usuarios de GitHub. Hecho con React. Se buscan usuarios
+            usando la API de GitHub. Se muestran sus perfiles y repos mas
+            recientes.
+          </p>
+        </div>
         <div class="item">
           <a href="https://lipitt.github.io/Reloj-en-CSS-y-JS/">
             <img src="img/projects/reloj.jpg" alt="Project" />
