added multiple projects

--- a/work.html
+++ b/work.html
@@ -63,85 +63,55 @@
             recientes.
           </p>
         </div>
-        <div class="item">
-          <a href="https://lipitt.github.io/Reloj-en-CSS-y-JS/">
-            <img src="img/projects/reloj.jpg" alt="Project" />
+        <div class="item item-card">
+          <a href="https://micropublicaciones.netlify.app/">
+            <img src="img/projects/micropublicaciones.jpg" alt="Project" />
           </a>
-          <a
-            href="https://lipitt.github.io/Reloj-en-CSS-y-JS/"
-            class="btn-light"
-          >
-            <i class="fas fa-eye"></i> CSS Clock
+          <a href="https://lipitt.github.io/Adivinador/" class="btn-light">
+            <i class="fas fa-eye"></i> MicroPublicaciones
           </a>
-          <a
-            href="https://github.com/Lipitt/Reloj-en-CSS-y-JS"
-            class="btn-dark"
-          >
+          <a href="https://micropublicaciones.netlify.app/" class="btn-dark">
             <i class="fab fa-github"></i> Github
           </a>
+          <p class="text-card">
+            App para hacer publicaciones como en una red social usando un falso
+            servidor (json server) Es una aplicacion CRUD usando webpack para el
+            manejo de paquetes y es compatible con async/await usando babel
+            polyfill.
+          </p>
         </div>
-        <div class="item">
-          <a href="https://Lipitt.github.io/Flex-Panels">
-            <img src="img/projects/panels.jpg" alt="Project" />
+        <div class="item item-card">
+          <a href="https://lipitt.github.io/CaloControl/">
+            <img src="img/projects/calocontrol.jpg" alt="Project" />
           </a>
-          <a href="https://Lipitt.github.io/Flex-Panels" class="btn-light">
-            <i class="fas fa-eye"></i> Flex Panels
+          <a href="https://lipitt.github.io/CaloControl/" class="btn-light">
+            <i class="fas fa-eye"></i> CaloControl
           </a>
-          <a href="https://github.com/Lipitt/Flex-Panels" class="btn-dark">
+          <a href="https://github.com/Lipitt/CaloControl" class="btn-dark">
             <i class="fab fa-github"></i> Github
           </a>
+          <p class="text-card">
+            App simple para seguimiento de calorias, hecha en vanilla javascript
+            usando el patrón módulo y almacenamiento local. Para el css se
+            utiliza Materialize
+          </p>
         </div>
-        <div class="item">
-          <a href="https://lipitt.github.io/Landing-Page/">
-            <img src="img/projects/landing page.jpg" alt="Project" />
+        <div class="item item-card">
+          <a href="https://lipitt.github.io/Lista-Tareas/">
+            <img src="img/projects/lista tareas.jpg" alt="Project" />
           </a>
-          <a href="https://lipitt.github.io/Landing-Page/" class="btn-light">
-            <i class="fas fa-eye"></i> Landing Page
+          <a href="https://lipitt.github.io/Lista-Tareas/" class="btn-light">
+            <i class="fas fa-eye"></i> Lista de Tareas
           </a>
-          <a href="https://github.com/Lipitt/Landing-Page" class="btn-dark">
+          <a href="https://github.com/Lipitt/Lista-Tareas" class="btn-dark">
             <i class="fab fa-github"></i> Github
           </a>
+          <p class="text-card">
+            Lista de Tareas hecha en vanilla javascript y materialize. Usa
+            almacenamiento local para persistir los datos.
+          </p>
         </div>
-        <div class="item">
-          <a href="https://lipitt.github.io/Code-Player/">
-            <img src="img/projects/code player.jpg" alt="Project" />
-          </a>
-          <a href="https://lipitt.github.io/Code-Player/" class="btn-light">
-            <i class="fas fa-eye"></i> Code Player
-          </a>
-          <a href="https://github.com/Lipitt/Code-Player" class="btn-dark">
-            <i class="fab fa-github"></i> Github
-          </a>
-        </div>
-        <div class="item">
-          <a href="https://lipitt.github.io/Random-Quote-Generator/">
-            <img src="img/projects/quote generator.jpg" alt="Project" />
-          </a>
-          <a
-            href="https://lipitt.github.io/Random-Quote-Generator/"
-            class="btn-light"
-          >
-            <i class="fas fa-eye"></i> Random Quote Generator
-          </a>
-          <a
-            href="https://github.com/Lipitt/Random-Quote-Generator"
-            class="btn-dark"
-          >
-            <i class="fab fa-github"></i> Github
-          </a>
-        </div>
-        <div class="item">
-          <a href="https://lipitt.github.io/Bateria/">
-            <img src="img/projects/bateria.jpg" alt="Project" />
-          </a>
-          <a href="https://lipitt.github.io/Bateria/" class="btn-light">
-            <i class="fas fa-eye"></i> Bateria en JS
-          </a>
-          <a href="https://github.com/Lipitt/Bateria" class="btn-dark">
-            <i class="fab fa-github"></i> Github
-          </a>
-        </div>
-        <div class="item">
+        <div class="item item-card">
           <a href="https://lipitt.github.io/Responsive-Portfolio/">
             <img src="img/projects/responsive portfolio.jpg" alt="Project" />
           </a>
@@ -157,6 +127,126 @@
           >
             <i class="fab fa-github"></i> Github
           </a>
+          <p class="text-card">
+            Portfolio responsive hecho en vanilla javascript y usando Sass
+          </p>
+        </div>
+        <div class="item item-card">
+          <a href="https://lipitt.github.io/BuscaHub/">
+            <img src="img/projects/buscahub.jpg" alt="Project" />
+          </a>
+          <a href="https://lipitt.github.io/BuscaHub/" class="btn-light">
+            <i class="fas fa-eye"></i> BuscaHub Javascript
+          </a>
+          <a href="https://github.com/Lipitt/BuscaHub" class="btn-dark">
+            <i class="fab fa-github"></i> Github
+          </a>
+          <p class="text-card">
+            Version vanilla javascript del buscador de GitHub
+          </p>
+        </div>
+        <div class="item item-card">
+          <a href="https://lipitt.github.io/Calculadora-de-Prestamos/">
+            <img src="img/projects/calculadora.jpg" alt="Project" />
+          </a>
+          <a
+            href="https://lipitt.github.io/Calculadora-de-Prestamos/"
+            class="btn-light"
+          >
+            <i class="fas fa-eye"></i> Calculadora de Prestamos
+          </a>
+          <a
+            href="https://github.com/Lipitt/Calculadora-de-Prestamos"
+            class="btn-dark"
+          >
+            <i class="fab fa-github"></i> Github
+          </a>
+          <p class="text-card">
+            Calculadora de Prestamos hecha con vanilla javascript y bootstrap
+          </p>
+        </div>
+        <div class="item item-card">
+          <a href="https://lipitt.github.io/Bateria/">
+            <img src="img/projects/bateria.jpg" alt="Project" />
+          </a>
+          <a href="https://lipitt.github.io/Bateria/" class="btn-light">
+            <i class="fas fa-eye"></i> Bateria musical
+          </a>
+          <a href="https://github.com/Lipitt/Bateria" class="btn-dark">
+            <i class="fab fa-github"></i> Github
+          </a>
+          <p class="text-card">Bateria musical hecha con vanilla javascript</p>
+        </div>
+        <div class="item item-card">
+          <a href="https://lipitt.github.io/Listado-Libros/">
+            <img src="img/projects/Lista Libros.jpg" alt="Project" />
+          </a>
+          <a href="https://lipitt.github.io/Listado-Libros/" class="btn-light">
+            <i class="fas fa-eye"></i> Listado de Libros
+          </a>
+          <a href="https://github.com/Lipitt/Listado-Libros" class="btn-dark">
+            <i class="fab fa-github"></i> Github
+          </a>
+          <p class="text-card">
+            Listado de libros hecha en vanilla javascript y skeleton css.
+          </p>
+        </div>
+        <div class="item item-card">
+          <a href="https://Lipitt.github.io/Flex-Panels">
+            <img src="img/projects/panels.jpg" alt="Project" />
+          </a>
+          <a href="https://Lipitt.github.io/Flex-Panels" class="btn-light">
+            <i class="fas fa-eye"></i> Flex Panels
+          </a>
+          <a href="https://github.com/Lipitt/Flex-Panels" class="btn-dark">
+            <i class="fab fa-github"></i> Github
+          </a>
+          <p class="text-card">
+            Pequeña galeria de imagenes usando paneles flexibles hechos con
+            flexbox. El proyecto esta hecho con diseño responsivo y vanilla
+            javascript.
+          </p>
+        </div>
+        <div class="item item-card">
+          <a href="https://lipitt.github.io/Reloj-en-CSS-y-JS/">
+            <img src="img/projects/reloj.jpg" alt="Project" />
+          </a>
+          <a
+            href="https://lipitt.github.io/Reloj-en-CSS-y-JS/"
+            class="btn-light"
+          >
+            <i class="fas fa-eye"></i> Reloj CSS
+          </a>
+          <a
+            href="https://github.com/Lipitt/Reloj-en-CSS-y-JS"
+            class="btn-dark"
+          >
+            <i class="fab fa-github"></i> Github
+          </a>
+          <p class="text-card">
+            Este proyecto recrea un reloj utilizando CSS y vanilla Javascript.
+            Para lograr el funcionamiento de los brazos del reloj, se ejecuta
+            una funcion cada segundo que convierte el segundo actual en grados y
+            usando la propiedad transform de CSS se mueve la posicion del brazo
+            al angulo correspondiente, dando un efecto similar a un reloj real.
+          </p>
+        </div>
+        <div class="item item-card">
+          <a href="https://lipitt.github.io/Adivinador/">
+            <img src="img/projects/Adivinador.jpg" alt="Project" />
+          </a>
+          <a href="https://lipitt.github.io/Adivinador/" class="btn-light">
+            <i class="fas fa-eye"></i> Adivinador de números
+          </a>
+          <a href="https://github.com/Lipitt/Adivinador" class="btn-dark">
+            <i class="fab fa-github"></i> Github
+          </a>
+          <p class="text-card">
+            Simple juego de adivinador de números OBJETIVOS: 1.el usuario debe
+            ingresar un numero entre un minimo y un maximo. 2.el usuario tiene
+            un numero fijo de intentos. 3.avisar de los intentos restantes y del
+            resultado. 4.permitir jugar nuevamente.
+          </p>
         </div>
       </div>
     </main>
