added meta tags for social media preview

--- a/index.html
+++ b/index.html
@@ -4,6 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta prefix="og: http://ogp.me/ns#" property="og:type" content="website" />
+
+    <meta
+      prefix="og: http://ogp.me/ns#"
+      property="og:title"
+      content="My Portfolio"
+    />
+
+    <meta
+      prefix="og: http://ogp.me/ns#"
+      property="og:description"
+      content="David Lipshitz's Portfolio"
+    />
+
+    <meta
+      prefix="og: http://ogp.me/ns#"
+      property="og:image"
+      content="https://github.com/Lipitt/Responsive-Portfolio/blob/gh-pages/img/projects/responsive%20portfolio.jpg?raw=true"
+    />
+
+    <meta
+      prefix="og: http://ogp.me/ns#"
+      property="og:url"
+      content="https://lipitt.github.io/Responsive-Portfolio/"
+    />
+
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
@@ -11,6 +37,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/main.css" />
+
     <title>Portfolio</title>
   </head>
 
