fixing social preview image display issues

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta
       prefix="og: http://ogp.me/ns#"
       property="og:image"
-      content="https://github.com/Lipitt/Responsive-Portfolio/blob/gh-pages/img/projects/responsive%20portfolio.jpg?raw=true"
+      content="https://github.com/Lipitt/Responsive-Portfolio/blob/gh-pages/img/projects/portfolio%20social.jpg?raw=true"
     />
 
     <meta
