fixed image issue

--- a/work.html
+++ b/work.html
@@ -133,7 +133,7 @@
         </div>
         <div class="item item-card">
           <a href="https://lipitt.github.io/BuscaHub/">
-            <img src="img/projects/buscahub.jpg" alt="Project" />
+            <img src="img/projects/buscahub-js.jpg" alt="Project" />
           </a>
           <a href="https://lipitt.github.io/BuscaHub/" class="btn-light">
             <i class="fas fa-eye"></i> BuscaHub Javascript
