--- a/work.html
+++ b/work.html
@@ -63,23 +63,7 @@
             recientes.
           </p>
         </div>
-        <div class="item item-card">
-          <a href="https://micropublicaciones.netlify.app/">
-            <img src="img/projects/micropublicaciones.jpg" alt="Project" />
-          </a>
-          <a href="https://lipitt.github.io/Adivinador/" class="btn-light">
-            <i class="fas fa-eye"></i> MicroPublicaciones
-          </a>
-          <a href="https://micropublicaciones.netlify.app/" class="btn-dark">
-            <i class="fab fa-github"></i> Github
-          </a>
-          <p class="text-card">
-            App para hacer publicaciones como en una red social usando un falso
-            servidor (json server) Es una aplicacion CRUD usando webpack para el
-            manejo de paquetes y es compatible con async/await usando babel
-            polyfill.
-          </p>
-        </div>
+
         <div class="item item-card">
           <a href="https://lipitt.github.io/CaloControl/">
             <img src="img/projects/calocontrol.jpg" alt="Project" />
@@ -246,6 +230,27 @@
             ingresar un numero entre un minimo y un maximo. 2.el usuario tiene
             un numero fijo de intentos. 3.avisar de los intentos restantes y del
             resultado. 4.permitir jugar nuevamente.
+          </p>
+        </div>
+        <div class="item item-card">
+          <a href="https://lipitt.github.io/Random-Quote-Generator/">
+            <img src="img/projects/quote generator.jpg" alt="Project" />
+          </a>
+          <a
+            href="https://lipitt.github.io/Random-Quote-Generator/"
+            class="btn-light"
+          >
+            <i class="fas fa-eye"></i> Generador de Frases Aleatorio
+          </a>
+          <a
+            href="https://github.com/Lipitt/Random-Quote-Generator"
+            class="btn-dark"
+          >
+            <i class="fab fa-github"></i> Github
+          </a>
+          <p class="text-card">
+            Uno de mis primeros proyectos: un generador de frases aleatorias
+            hecho con bootstrap y jQuery.
           </p>
         </div>
       </div>
