added projects adviency, feedback y cmyk-lime

--- a/work.html
+++ b/work.html
@@ -45,14 +45,33 @@
       <h1 class="lg-heading">
         Mis <span class="text-secondary"> Proyectos</span>
       </h1>
-      <h2 class="sm-heading">Revisa mis proyectos</h2>
+      <h2 class="sm-heading">Revisa algunos de mis proyectos</h2>
       <div class="projects">
+        <div class="item item-card">
+          <a href="https://cmyk-lime.vercel.app/">
+            <img src="img/projects/cmyk-lime.png" alt="Project" />
+          </a>
+          <a href="https://cmyk-lime.vercel.app/" class="btn-light">
+            <i class="fas fa-eye"></i> CMYK - Lime
+          </a>
+          <a href="https://github.com/frontendcafe/cmyk-lime/" class="btn-dark">
+            <i class="fab fa-github"></i> Github
+          </a>
+          <p class="text-card">
+            Proyecto colaborativo realizado junto a devs de
+            <a class="show-link" href="https://frontend.cafe/" target="_blank"
+              >frontend.cafe</a
+            >, Es una app educativa para que niños de temprana edad puedan dar
+            sus primeros pasos interactuando con interfaces tactiles. Se hizo
+            con React, Next.js y Framer Motion.
+          </p>
+        </div>
         <div class="item item-card">
           <a href="https://buscahub.netlify.app/">
             <img src="img/projects/buscahub-react.jpg" alt="Project" />
           </a>
           <a href="https://buscahub.netlify.app/" class="btn-light">
-            <i class="fas fa-eye"></i> BuscaHub React
+            <i class="fas fa-eye"></i> BuscaHub
           </a>
           <a href="https://github.com/Lipitt/BuscaHub-React" class="btn-dark">
             <i class="fab fa-github"></i> Github
@@ -61,6 +80,45 @@
             Buscador de usuarios de GitHub. Hecho con React. Se buscan usuarios
             usando la API de GitHub. Se muestran sus perfiles y repos mas
             recientes.
+          </p>
+        </div>
+        <div class="item item-card">
+          <a href="https://feedback-reactt.netlify.app/">
+            <img src="img/projects/feedback-app.png" alt="Project" />
+          </a>
+          <a href="https://feedback-reactt.netlify.app/" class="btn-light">
+            <i class="fas fa-eye"></i> Feedback App
+          </a>
+          <a href="https://github.com/Lipitt/feedback-app" class="btn-dark">
+            <i class="fab fa-github"></i> Github
+          </a>
+          <p class="text-card">
+            App de feedback para un servicio/producto. Hecha para probar el
+            manejo de github context y otras funciones de react
+          </p>
+        </div>
+
+        <div class="item item-card">
+          <a href="https://adviency-lipitt.netlify.app/">
+            <img src="img/projects/adviency.png" alt="Project" />
+          </a>
+          <a href="https://adviency-lipitt.netlify.app/" class="btn-light">
+            <i class="fas fa-eye"></i> Adviency
+          </a>
+          <a href="https://github.com/Lipitt/Adviency" class="btn-dark">
+            <i class="fab fa-github"></i> Github
+          </a>
+          <p class="text-card">
+            Un challenge de
+            <a
+              class="show-link"
+              href="https://twitter.com/goncy/status/1466050967808401409"
+              target="_blank"
+              >goncy</a
+            >
+            donde hacemos la misma app 23 veces (una lista de regalos navideña),
+            en 23 dias, agregandole una nueva feature cada dia. La idea es
+            aprender a traves de repeticion, cada dia se tiene que empezar de 0
           </p>
         </div>
 
@@ -80,6 +138,7 @@
             utiliza Materialize
           </p>
         </div>
+
         <div class="item item-card">
           <a href="https://lipitt.github.io/Lista-Tareas/">
             <img src="img/projects/lista tareas.jpg" alt="Project" />
@@ -115,20 +174,7 @@
             Portfolio responsive hecho en vanilla javascript y usando Sass
           </p>
         </div>
-        <div class="item item-card">
-          <a href="https://lipitt.github.io/BuscaHub/">
-            <img src="img/projects/buscahub-js.jpg" alt="Project" />
-          </a>
-          <a href="https://lipitt.github.io/BuscaHub/" class="btn-light">
-            <i class="fas fa-eye"></i> BuscaHub Javascript
-          </a>
-          <a href="https://github.com/Lipitt/BuscaHub" class="btn-dark">
-            <i class="fab fa-github"></i> Github
-          </a>
-          <p class="text-card">
-            Version vanilla javascript del buscador de GitHub
-          </p>
-        </div>
+
         <div class="item item-card">
           <a href="https://lipitt.github.io/Calculadora-de-Prestamos/">
             <img src="img/projects/calculadora.jpg" alt="Project" />
@@ -175,22 +221,7 @@
             Listado de libros hecha en vanilla javascript y skeleton css.
           </p>
         </div>
-        <div class="item item-card">
-          <a href="https://Lipitt.github.io/Flex-Panels">
-            <img src="img/projects/panels.jpg" alt="Project" />
-          </a>
-          <a href="https://Lipitt.github.io/Flex-Panels" class="btn-light">
-            <i class="fas fa-eye"></i> Flex Panels
-          </a>
-          <a href="https://github.com/Lipitt/Flex-Panels" class="btn-dark">
-            <i class="fab fa-github"></i> Github
-          </a>
-          <p class="text-card">
-            Pequeña galeria de imagenes usando paneles flexibles hechos con
-            flexbox. El proyecto esta hecho con diseño responsivo y vanilla
-            javascript.
-          </p>
-        </div>
+
         <div class="item item-card">
           <a href="https://lipitt.github.io/Reloj-en-CSS-y-JS/">
             <img src="img/projects/reloj.jpg" alt="Project" />
@@ -230,27 +261,6 @@
             ingresar un numero entre un minimo y un maximo. 2.el usuario tiene
             un numero fijo de intentos. 3.avisar de los intentos restantes y del
             resultado. 4.permitir jugar nuevamente.
-          </p>
-        </div>
-        <div class="item item-card">
-          <a href="https://lipitt.github.io/Random-Quote-Generator/">
-            <img src="img/projects/quote generator.jpg" alt="Project" />
-          </a>
-          <a
-            href="https://lipitt.github.io/Random-Quote-Generator/"
-            class="btn-light"
-          >
-            <i class="fas fa-eye"></i> Generador de Frases Aleatorio
-          </a>
-          <a
-            href="https://github.com/Lipitt/Random-Quote-Generator"
-            class="btn-dark"
-          >
-            <i class="fab fa-github"></i> Github
-          </a>
-          <p class="text-card">
-            Uno de mis primeros proyectos: un generador de frases aleatorias
-            hecho con bootstrap y jQuery.
           </p>
         </div>
       </div>
