--- a/about.html
+++ b/about.html
@@ -56,8 +56,7 @@
             comunidad
             <a class="link" href="https://frontend.cafe/" target="_blank"
               >FrontEnd Cafe</a
-            >
-            Empecé estudiando Ingeniería en Sistemas en la
+            >. Empecé estudiando Ingeniería en Sistemas en la
             <a
               class="link"
               href="https://uai.edu.ar/facultades/tecnolog%C3%ADa-inform%C3%A1tica/ingenier%C3%ADa-en-sistemas-inform%C3%A1ticos/"
